lockwise-proof-of-concept/samples/positive/unused/resources/363/15.otf
version https://git-lfs.github.com/spec/v1
oid sha256:bd3ac10a9016f103e902f60cd655346b50929d23f119998e3de93eaf51bec694
size 53264
