lockwise-proof-of-concept/samples/negative/resources/fp33/12.otf
version https://git-lfs.github.com/spec/v1
oid sha256:1db4e59927820f0b723c73e8b06357e2d3f91673db430a226ef28de1b0f14ae5
size 121564
